--- a/NutriApp/bin/AndroidManifest.xml
+++ b/NutriApp/bin/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="21" />
 
+    <!-- Atividade principal -->
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -21,9 +22,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+       
+         <!-- Intent de ir para o menu do app -->
+         <activity
+			android:name=
+			"com.example.helloworld.MenuActivity">
+			<intent-filter>
+				<action
+				android:name="helloworld.MOSTRAR_MENU" />
+				<category
+				android:name="helloworld.MENU_SAUDACAO" />
+				<category
+				android:name="android.intent.category.DEFAULT" />
+			</intent-filter>
+		</activity>
         
-        
-        
+       <!-- Intent de ir para calculadora de imc -->
         <activity
 			android:name=
 			"com.example.helloworld.IMCActivity">
@@ -37,15 +51,15 @@
 			</intent-filter>
 		</activity>
 		
-        
-         <activity
+        <!-- Intent de ir para substituicoes-->
+        <activity
 			android:name=
-			"com.example.helloworld.MenuActivity">
+			"com.example.helloworld.SubActivity">
 			<intent-filter>
 				<action
-				android:name="helloworld.MOSTRAR_MENU" />
+				android:name="helloworld.LISTA_SUBSTITUICAO" />
 				<category
-				android:name="helloworld.MENU_SAUDACAO" />
+				android:name="helloworld.SUB_SAUDACAO" />
 				<category
 				android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
